--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,7 @@ requires-python = ">=3.9"
 license = {text = "Apache-2.0"}
 dynamic = ["version"]
 dependencies = [
-    "scapy", "vpp_papi", "typer",
+    "scapy", "vpp_papi", "typer", "asyncio_dgram",
 ]
 authors = [
     { name = "Ole Troan", email = "otroan@employees.org"},
