--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,8 @@ requires-python = ">=3.9"
 license = {text = "Apache-2.0"}
 dynamic = ["version"]
 dependencies = [
-    "pydantic", "scapy", "vpp_papi>=2.1.0", "typer", "asyncio_dgram",
+    "pydantic", "scapy @ git+https://github.com/secdev/scapy.git",
+    "vpp_papi>=2.1.0", "typer", "asyncio_dgram",
 ]
 authors = [
     { name = "Ole Troan", email = "otroan@employees.org"},
@@ -34,3 +35,4 @@ repository = "https://github.com/nataasvpp/dhcp"
 
 [project.scripts]
 vppdhcd = "vppdhc.main:app"
+vppdhcctl = "vppdhc.vppdhcctl:app"
