--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,12 +2,19 @@
 requires = ["setuptools","setuptools_scm"]
 build-backend = "setuptools.build_meta"
 
-[tool.pylint.main]
+[tool.ruff.lint]
+select = ["ALL"]
 
-[tool.pylint.basic]
+[tool.ruff]
+line-length = 120
 
-[tool.pylint."messages control"]
-disable = ["missing-function-docstring", "missing-module-docstring", "missing-class-docstring", "too-few-public-methods"]
+[lint.per-file-ignores]
+"tests/*.py" = ["S101"]
+
+#[tool.pylint.main]
+#[tool.pylint.basic]
+#[tool.pylint."messages control"]
+#disable = ["missing-function-docstring", "missing-module-docstring", "missing-class-docstring", "too-few-public-methods"]
 
 [tool.setuptools_scm]
 write_to = "vppdhc/_version.py"
@@ -18,7 +25,7 @@ packages = ['vppdhc']
 [project]
 name = "vppdhc"
 description="A DHCP server for VPP"
-requires-python = ">=3.9"
+requires-python = ">=3.11"
 license = {text = "Apache-2.0"}
 dynamic = ["version"]
 dependencies = [
