--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,8 +29,12 @@ requires-python = ">=3.13"
 license = {text = "Apache-2.0"}
 dynamic = ["version"]
 dependencies = [
-    "pydantic", "scapy @ git+https://github.com/secdev/scapy.git",
-    "vpp_papi>=2.1.0", "typer", "asyncio_dgram",
+    "pydantic",
+    "scapy @ git+https://github.com/secdev/scapy.git",
+    "vpp_papi>=2.1.0",
+    "typer",
+    "asyncio_dgram",
+    "ruff>=0.8.2",
 ]
 authors = [
     { name = "Ole Troan", email = "otroan@employees.org"},
