--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,10 +31,12 @@ dynamic = ["version"]
 dependencies = [
     "pydantic",
     "scapy @ git+https://github.com/secdev/scapy.git",
-    "vpp_papi>=2.1.0",
+    "vpp_papi>=2.3.0",
     "typer",
     "asyncio_dgram",
     "ruff>=0.8.2",
+    "pytest>=8.3.4",
+    "pytest-asyncio>=0.24.0",
 ]
 authors = [
     { name = "Ole Troan", email = "otroan@employees.org"},
